--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@prisma/client": "^6.13.0",
     "next": "15.4.5",
+    "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
