--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.13.0",
     "@radix-ui/themes": "^3.2.1",
     "axios": "^1.11.0",
     "easymde": "^2.20.0",
     "next": "15.4.5",
+    "next-auth": "^4.24.11",
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
