--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^10.1.0",
     "react-simplemde-editor": "^5.2.0",
+    "recharts": "^3.1.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "zod": "^4.0.14"
