--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.13.0",
     "@radix-ui/themes": "^3.2.1",
+    "@sentry/nextjs": "^10.1.0",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
     "axios": "^1.11.0",
